fix wrapping and font

--- a/styles/hix.less
+++ b/styles/hix.less
@@ -7,11 +7,14 @@
 @component-padding: 5px;
 
 hix-editor {
+	font-family: monospace;
 	width: 100%;
 	height: 100%;
 	background: @syntax-background-color;
 	overflow: auto;
 	-webkit-user-select: none;
+
+  white-space: nowrap;
 
 	offsets {
 		height: 100%;
